editPreview class gets fixed height and overflow-y: scroll.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,8 @@ article.fullWidth {
     float: left;
     width: 46%;
     margin: 0 2%;
+    overflow-y: scroll;
+    height: 620px;
 }
 
 .editPreview h1 {
